tests/errors/obvious-conflict.futil
// -p well-formed
import "primitives/core.futil";
import "primitives/memories/comb.futil";
component main() -> () {
  cells {
    r = std_reg(32);
    w1 = std_wire(32);
    w2 = std_wire(32);
  }
  wires {
    r.in = w1.out;
    r.in = w2.out;
  }
  control {}
}
